# ghost-layout-fixer

./: CMakeLists.txt  README.md
cmake/: warnings.cmake
docs/: ghost-layout-fixer_MVP.md  ghost-layout-fixer_TZ.md  project_skeleton_proposal.md
src/: main.cpp
src/app/: ApplicationService.h
src/app/src/: ApplicationService.cpp
src/cli/: CliParser.h  CliTypes.h
src/cli/src/: CliParser.cpp
src/common/: Logger.h  Result.h  StringUtils.h
src/common/src/: Logger.cpp
src/core/: BackupService.h  ExitCodes.h  LayoutFixService.h  Models.h
src/core/src/: BackupService.cpp  LayoutFixService.cpp
src/platform/: InstalledLanguageService.h  PrivilegeService.h  RegistryBranches.h  RegistryService.h  SystemCommandRunner.h
src/platform/src/: InstalledLanguageService.cpp  PrivilegeService.cpp  RegistryService.cpp  SystemCommandRunner.cpp
src/report/: ReportPrinter.h
src/report/src/: ReportPrinter.cpp
tests/commands/: CommandWorkflowTests.cpp
tests/core/: BackupServiceTests.cpp  LayoutFixServiceTests.cpp
tests/platform/: InstalledLanguageServiceTests.cpp  RegistryServiceTests.cpp
tests/test_support/: TestFakes.h  TestHelpers.h  TestSuites.h
